# jre-web-scrape-utils

./: .gitignore  pyproject.toml
src/web_scrape_utils/: __init__.py  main.py  web_driver.py
